# route4me-c-sdk

./: README.md
include/: route4me.h
src/: CMakeLists.txt  json_deserialize.c  route4me.c
test/: BatchGeocoder.c  CMakeLists.txt  DuplicateRoute.c  GetVehicles.c  MultipleDepotMultipleDriverTimeWindow.c  OptimizeAndReoptimize.c
